Don't display TOCs of posts in blog index

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -33,6 +33,10 @@ ul#markdown-toc {
    background-color: white;
 }
 
+.blog-index #markdown-toc {
+   display: none;
+}
+
 .footnotes {
    font-size: 13px;
    line-height: 16px;
