Remove unmaintained posts; change styles

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -33,8 +33,10 @@ ul#markdown-toc {
    background-color: white;
 }
 
-.blog-index #markdown-toc {
-   display: none;
+.blog-index {
+   #markdown-toc, sup[id^=fnref], .footnotes {
+      display: none;
+   }
 }
 
 .footnotes {
